# machine-learning-kobe

./: README.md  Untitled.ipynb  leaderboard.csv  mlruns.db  modelo_final.pkl  pipeline.py  pyproject.toml  requirements.txt  resultado_aplicacao_20250406_210259.parquet
conf/base/: catalog.yml
env-3.11/: pyvenv.cfg
src/machine_learning_kobe_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/machine_learning_kobe_project/pipelines/aplicacao/: nodes.py  pipeline.py
src/machine_learning_kobe_project/pipelines/preparacao_dados/: nodes.py  pipeline.py
src/machine_learning_kobe_project/pipelines/preprocesso/: nodes.py  pipeline.py
src/machine_learning_kobe_project/pipelines/preprocesso_producao/: __init__.py  nodes.py  pipeline.py
src/machine_learning_kobe_project/pipelines/treinamento/: nodes.py  pipeline.py
src/machine_learning_kobe_project/pipelines/treinamento_modelo/: nodes.py  pipeline.py
